--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Bootstrap Project</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa numquam nemo blanditiis vel, accusantium recusandae maiores vitae eligendi eaque labore.</p>
 </body>
 </html>
